--- a/package.json
+++ b/package.json
@@ -42,8 +42,13 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.7"
   }
