--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/39SquareFeetStudio/pet-ban",
+  "homepage": "https://39SquareFeetStudio.github.io/pet-ban",
   "name": "pet-ban",
   "version": "0.1.0",
   "private": true,
@@ -25,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -D build"
   },
   "eslintConfig": {
     "extends": [
