--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "rive-react": "^0.0.31",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "web3": "^4.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
